--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
     "node": "20.x"
   },
   "scripts": {
+    "predev": "svelte-kit sync",
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "postinstall": "echo skip svelte-kit sync",
+    "prebuild": "svelte-kit sync"
+  },
+  "dependencies": {
+    "@atproto/api": "^0.13.22",
+    "wink-sentiment": "^5.0.0"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.3.1",
+    "@sveltejs/adapter-vercel": "^5.3.0",
     "@sveltejs/kit": "^2.46.5",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
