--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "postinstall": "echo skip svelte-kit sync",
-    "prebuild": "svelte-kit sync"
+    "prebuild": "svelte-kit sync",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@atproto/api": "^0.13.22",
@@ -22,10 +26,14 @@
   "devDependencies": {
     "@sveltejs/adapter-vercel": "^5.3.0",
     "@sveltejs/kit": "^2.46.5",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
+    "jsdom": "^25.0.1",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tslib": "^2.8.1",
     "typescript": "^5.6.3",
-    "vite": "^6.3.0"
+    "vite": "^6.3.0",
+    "vitest": "^2.1.8"
   }
 }
