--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
     "node": "20.x"
   },
   "scripts": {
-    "predev": "svelte-kit sync",
+    "predev": "echo skip svelte-kit sync",
     "dev": "vite dev",
     "build": "vite build",
-    "preview": "vite preview",
+    "preview": "svelte-kit preview --port 4173 --host",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "postinstall": "echo skip svelte-kit sync",
     "prebuild": "svelte-kit sync",
-    "test": "vitest",
+    "test": "node simple-test.js",
+    "test:vitest": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:simple": "node simple-test.js"
   },
   "dependencies": {
     "@atproto/api": "^0.13.22",
@@ -26,14 +28,14 @@
   "devDependencies": {
     "@sveltejs/adapter-vercel": "^5.3.0",
     "@sveltejs/kit": "^2.46.5",
-    "@vitest/coverage-v8": "^2.1.8",
-    "@vitest/ui": "^2.1.8",
+    "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/ui": "^1.6.0",
     "jsdom": "^25.0.1",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tslib": "^2.8.1",
     "typescript": "^5.6.3",
     "vite": "^6.3.0",
-    "vitest": "^2.1.8"
+    "vitest": "^1.6.0"
   }
 }
