Fix Vercel build: rename '+server.test.ts' under routes to 'server.test.ts' (SvelteKit reserves + files)

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "dependencies": {
     "@atproto/api": "^0.13.22",
+    "@supabase/supabase-js": "^2.75.0",
     "openai": "^6.3.0",
+    "resend": "^6.1.2",
     "wink-sentiment": "^5.0.0"
   },
   "devDependencies": {
