feat(budget): add budget planner config, API, and UI; document env and usage

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
 # Arsenal Matchday Pulse - Example Environment Variables
 
+# Budget Planner
+BUDGET_PER_PLATFORM_DOLLARS="50"
+BSKY_COST_PER_MONTH_DOLLARS="0"
+# Optional: set to enable planning for these platforms (leave empty to keep unconfigured)
+TWITTER_COST_PER_MONTH_DOLLARS=""
+THREADS_COST_PER_MONTH_DOLLARS=""
+
 # Supabase (Client)
 PUBLIC_SUPABASE_URL="https://YOUR-PROJECT-ref.supabase.co"
 PUBLIC_SUPABASE_ANON_KEY="YOUR_PUBLIC_ANON_KEY"
