feat(planner): add admin-only cost-to-cap estimator and integrate into planner API/UI; add env examples; unit tests

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,19 @@ BSKY_COST_PER_MONTH_DOLLARS="0"
 TWITTER_COST_PER_MONTH_DOLLARS=""
 THREADS_COST_PER_MONTH_DOLLARS=""
 
+# Cost-to-Cap Estimator (admin-only /api/accounts/plan)
+MATCHES_PER_MONTH="8"
+PRE_MINUTES="120"
+LIVE_MINUTES="105"
+POST_MINUTES="60"
+BUDGET_SAFETY_BUFFER="1.2"
+
+# Pricing assumptions (only needed if platform is configured)
+TWITTER_COST_PER_1K_REQUESTS=""
+TWITTER_REQUESTS_PER_ACCOUNT_PER_MIN="1"
+THREADS_COST_PER_1K_REQUESTS=""
+THREADS_REQUESTS_PER_ACCOUNT_PER_MIN="1"
+
 # Supabase (Client)
 PUBLIC_SUPABASE_URL="https://YOUR-PROJECT-ref.supabase.co"
 PUBLIC_SUPABASE_ANON_KEY="YOUR_PUBLIC_ANON_KEY"
