--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   },
   "dependencies": {
     "@atproto/api": "^0.13.22",
+    "@modelcontextprotocol/sdk": "^1.20.1",
+    "@slack/web-api": "^7.11.0",
     "@supabase/supabase-js": "^2.75.0",
+    "dotenv": "^17.2.3",
     "openai": "^6.3.0",
     "resend": "^6.1.2",
     "wink-sentiment": "^5.0.0"
