chore: add VS Code terminal settings and remote MCP helpers (workspace bash profile, docs, scripts)

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,9 @@ RESEND_FROM="notifications@matchday-pulse.dev"
 
 # Bluesky verification (optional)
 BSKY_VERIFY_TTL_MS="600000"
+
+# Remote Slack MCP Server
+# Slack bot token for posting messages via Slack Web API
+SLACK_BOT_TOKEN=""
+# Bearer auth token required by /mcp/tools and /mcp/call (set a strong random string)
+MCP_AUTH_TOKEN=""
