feat(summaries): optional Slack MCP alerts (rate limit, timeout, missing key, failures); env examples for alerting

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,9 @@ BSKY_VERIFY_TTL_MS="600000"
 SLACK_BOT_TOKEN=""
 # Bearer auth token required by /mcp/tools and /mcp/call (set a strong random string)
 MCP_AUTH_TOKEN=""
+
+# Summaries API alerting via remote Slack MCP (optional)
+# If set, the summaries API will send alerts on rate limit, timeouts, missing key, and failures
+SUMMARIES_ALERTS_MCP_BASE_URL=""
+SUMMARIES_ALERTS_MCP_TOKEN=""
+SUMMARIES_ALERTS_CHANNEL="#cline"
